Move default values to attest itself.
This way we won't have missing entries when we update attest but don't
regenerate attest.conf.

--- a/attest.conf.in
+++ b/attest.conf.in
@@ -2,13 +2,5 @@
 # If you make any changes to this file they will be overwritten when
 # you rerun ./configure or cmake.
 [attest]
-jobs = 1
-keep_work_directories = False
-mpiexec = @MPIEXEC_EXECUTABLE@
+mpiexec = @DEAL_II_MPIEXEC@
 numdiff = @NUMDIFF_EXECUTABLE@
-show_only = False
-test_directory = /tests/
-test_timeout = 600
-include_regex = .*
-exclude_regex = ^$
-verbose = False
